methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:17: error: expected class or object definition
def faireFleur(c:Color){
^FlowerPot:26: error: expected class or object definition
def fairePetale(c:Color){
^FlowerPot:33: error: expected class or object definition
def faireCentre(){
^FlowerPot:39: error: expected class or object definition
def marquerSol(c:Color){
^FlowerPot:45: error: Unmatched closing brace '}' ignored here
}
^